err/parc-reader.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bs4-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/corenlp_xml_reader'...
Compiling './lib/python3.5/site-packages/corenlp_xml_reader/annotated_text.py'...
***   File "./lib/python3.5/site-packages/corenlp_xml_reader/annotated_text.py", line 140
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corenlp_xml_reader/data'...
Listing './lib/python3.5/site-packages/corenlp_xml_reader/data/AIDA'...
Listing './lib/python3.5/site-packages/corenlp_xml_reader/data/CoreNLP'...
Listing './lib/python3.5/site-packages/corenlp_xml_reader/data/raw-text'...
Listing './lib/python3.5/site-packages/corenlp_xml_reader-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/parc_reader'...
Listing './lib/python3.5/site-packages/parc_reader/data'...
Compiling './lib/python3.5/site-packages/parc_reader/reader.py'...
***   File "./lib/python3.5/site-packages/parc_reader/reader.py", line 442
    print new_attribution['id']
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/parc_reader/utils.py'...
***   File "./lib/python3.5/site-packages/parc_reader/utils.py", line 115
    print span
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/parc_reader-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
